--- a/前端基础/重构/目录.md
+++ b/前端基础/重构/目录.md
@@ -10,9 +10,9 @@
 
 
 其实我理解吧，有些点知道了，那就提前规避掉，实在规避不掉的咋弄呢，写呗，写的跟狗💩一样也没事儿，后面在多读几遍，重构它。
-
     
 ## 提炼函数（106）
+
 ![LOGO](/public/image/refactoring/ExtractFunction.png)
 
 ## 内联函数（115）
@@ -31,21 +31,17 @@
 
 ![LOGO](/public/image/refactoring/ChangeFunctionDeclaration.png)
 
-
 ## 封装变量（132）
 
 ![LOGO](/public/image/refactoring/EncapsulateVariable.png)
-
 
 ## 变量改名（137）
 
 ![LOGO](/public/image/refactoring/RenameVariable.png)
 
-
 ## 引入参数对象（140）
 
 ![LOGO](/public/image/refactoring/IntroduceParameterObject.png)
-
 
 ## 函数组合成类（144）
 
@@ -58,8 +54,6 @@
 ## 拆分阶段（154）
 
 ![LOGO](/public/image/refactoring/SplitPhase.png)
-
-
 
 ## 封装记录（162）
 
@@ -93,37 +87,9 @@
 
 ![LOGO](/public/image/refactoring/RemoveMiddleMan.png)
 
-
-
 ## 替换算法（195）
 
 ![LOGO](/public/image/refactoring/SubstituteAlgorithm.png)
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-## 拆分循环（227）
-
-![LOGO](/public/image/refactoring/SplitLoop.png)
-
-## 移动语句（223）
-
-![LOGO](/public/image/refactoring/SlideStatements.png)
 
 ## 搬移函数（198）
 
@@ -133,9 +99,55 @@
 
 ![LOGO](/public/image/refactoring/MoveField.png)
 
+
+## 搬移语句到函数（213）
+
+![LOGO](/public/image/refactoring/MoveStatementsIntoFunction.png)
+
+## 搬移语句到调用者（217）
+
+![LOGO](/public/image/refactoring/MoveStatementsToCallers.png)
+
+## 以函数调用取代内联代码（222）
+
+![LOGO](/public/image/refactoring/ReplaceInlineCodeWithFunctionCall.png)
+
+## 移动语句（223）
+
+![LOGO](/public/image/refactoring/SlideStatements.png)
+
+## 拆分循环（227）
+
+![LOGO](/public/image/refactoring/SplitLoop.png)
+
 ## 以管道取代循环（231）
 
 ![LOGO](/public/image/refactoring/ReplaceLoopWithPipeline.png)
+
+## 移除死代码（237）
+
+![LOGO](/public/image/refactoring/RemoveDeadCode.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ## 以多态取代条件表达式（272）
 
@@ -197,9 +209,7 @@
 
 ![LOGO](/public/image/refactoring/CollapseHierarchy.png)
 
-## 移除死代码（237）
 
-![LOGO](/public/image/refactoring/RemoveDeadCode.png)
 
 ## 引入特例（289）
 
@@ -230,9 +240,6 @@
 ## 引入断言（302）
 
 ![LOGO](/public/image/refactoring/IntroduceAssertion.png)
-
-## 搬移语句到调用者（217）
-![LOGO](/public/image/refactoring/MoveStatementsToCallers.png)
 
 
 
