重新组织数据

--- a/前端基础/重构/目录.md
+++ b/前端基础/重构/目录.md
@@ -128,6 +128,28 @@
 
 ![LOGO](/public/image/refactoring/RemoveDeadCode.png)
 
+## 拆分变量（240）
+
+![LOGO](/public/image/refactoring/SplitVariable.png)
+
+## 字段改名（244）
+
+![LOGO](/public/image/refactoring/RenameField.png)
+
+## 以查询取代派生变量（248）
+
+![LOGO](/public/image/refactoring/ReplaceDerivedVariableWithQuery.png)
+
+## 将引用对象改为值对象（252）
+
+![LOGO](/public/image/refactoring/ChangeReferenceToValue.png)
+
+
+## 将值对象改为引用对象  （256）
+
+![LOGO](/public/image/refactoring/ChangeValueToReference.png)
+
+
 
 
 
@@ -165,9 +187,7 @@
 
 ![LOGO](/public/image/refactoring/ParameterizeFunction.png)
 
-## 字段改名（244）
 
-![LOGO](/public/image/refactoring/RenameField.png)
 
 ## 保持对象完整（319）
 
@@ -189,9 +209,7 @@
 
 ![LOGO](/public/image/refactoring/RemoveFlagArgument.png)
 
-## 拆分变量（240）
 
-![LOGO](/public/image/refactoring/SplitVariable.png)
 
 ## 将查询函数和修改函数分离（306）
 
@@ -201,9 +219,7 @@
 
 ![LOGO](/public/image/refactoring/RemoveSettingMethod.png)
 
-## 将引用对象改为值对象（252）
 
-![LOGO](/public/image/refactoring/ChangeReferenceToValue.png)
 
 ## 折叠继承体系（380）
 
