简化条件逻辑

--- a/前端基础/重构/目录.md
+++ b/前端基础/重构/目录.md
@@ -149,31 +149,49 @@
 
 ![LOGO](/public/image/refactoring/ChangeValueToReference.png)
 
+## 分解条件表达式（260）
+
+![LOGO](/public/image/refactoring/DecomposeConditional.png)
 
 
+## 合并条件表达式（263）
 
+![LOGO](/public/image/refactoring/ConsolidateConditionalExpression.png)
 
+## 以卫语句取代嵌套条件表达式（266）
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+![LOGO](/public/image/refactoring/ReplaceNestedConditionalWithGuardClauses.png)
 
 ## 以多态取代条件表达式（272）
 
 ![LOGO](/public/image/refactoring/ReplaceConditionalWithPolymorphism.png)
+
+## 引入特例（289）
+
+![LOGO](/public/image/refactoring/IntroduceSpecialCase.png)
+
+## 引入断言（302）
+
+![LOGO](/public/image/refactoring/IntroduceAssertion.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ## 子类取代类型码（362）
 
@@ -187,8 +205,6 @@
 
 ![LOGO](/public/image/refactoring/ParameterizeFunction.png)
 
-
-
 ## 保持对象完整（319）
 
 ![LOGO](/public/image/refactoring/PreserveWholeObject.png)
@@ -196,10 +212,6 @@
 ## 以命令取代函数（337）
 
 ![LOGO](/public/image/refactoring/ReplaceFunctionWithCommand.png)
-
-## 分解条件表达式（260）
-
-![LOGO](/public/image/refactoring/DecomposeConditional.png)
 
 ## 查询取代参数（324）
 
@@ -209,8 +221,6 @@
 
 ![LOGO](/public/image/refactoring/RemoveFlagArgument.png)
 
-
-
 ## 将查询函数和修改函数分离（306）
 
 ![LOGO](/public/image/refactoring/SeparateQueryFromModifier.png)
@@ -219,18 +229,9 @@
 
 ![LOGO](/public/image/refactoring/RemoveSettingMethod.png)
 
-
-
 ## 折叠继承体系（380）
 
 ![LOGO](/public/image/refactoring/CollapseHierarchy.png)
-
-
-
-## 引入特例（289）
-
-![LOGO](/public/image/refactoring/IntroduceSpecialCase.png)
-
 
 
 ## 以委托取代超类（399）
@@ -253,9 +254,7 @@
 
 ![LOGO](/public/image/refactoring/PushDownField.png)
 
-## 引入断言（302）
 
-![LOGO](/public/image/refactoring/IntroduceAssertion.png)
 
 
 
