--- a/前端基础/重构/目录.md
+++ b/前端基础/重构/目录.md
@@ -174,11 +174,47 @@
 
 ![LOGO](/public/image/refactoring/IntroduceAssertion.png)
 
+## 将查询函数和修改函数分离（306）
+
+![LOGO](/public/image/refactoring/SeparateQueryFromModifier.png)
+
+## 函数参数化（310）
+
+![LOGO](/public/image/refactoring/ParameterizeFunction.png)
+
+## 移除标记参数（314）
+
+![LOGO](/public/image/refactoring/RemoveFlagArgument.png)
+
+## 保持对象完整（319）
+
+![LOGO](/public/image/refactoring/PreserveWholeObject.png)
+
+## 查询取代参数（324）
+
+![LOGO](/public/image/refactoring/ReplaceParameterWithQuery.png)
 
 
+## 以参数取代查询（327）
+
+![LOGO](/public/image/refactoring/ReplaceQueryWithParameter.png)
+
+## 移除设值函数（331）
+
+![LOGO](/public/image/refactoring/RemoveSettingMethod.png)
+
+## 工厂函数取代构造函数（334）
+
+![LOGO](/public/image/refactoring/ReplaceConstructorWithFactoryFunction.png)
+
+## 以命令取代函数（337）
+
+![LOGO](/public/image/refactoring/ReplaceFunctionWithCommand.png)
 
 
+## 以函数取代命令（344）
 
+![LOGO](/public/image/refactoring/ReplaceCommandWithFunction.png)
 
 
 
@@ -197,37 +233,9 @@
 
 ![LOGO](/public/image/refactoring/ReplaceTypeCodeWithSubclasses.png)
 
-## 工厂函数取代构造函数（334）
 
-![LOGO](/public/image/refactoring/ReplaceConstructorWithFactoryFunction.png)
 
-## 函数参数化（310）
 
-![LOGO](/public/image/refactoring/ParameterizeFunction.png)
-
-## 保持对象完整（319）
-
-![LOGO](/public/image/refactoring/PreserveWholeObject.png)
-
-## 以命令取代函数（337）
-
-![LOGO](/public/image/refactoring/ReplaceFunctionWithCommand.png)
-
-## 查询取代参数（324）
-
-![LOGO](/public/image/refactoring/ReplaceParameterWithQuery.png)
-
-## 移除标记参数（314）
-
-![LOGO](/public/image/refactoring/RemoveFlagArgument.png)
-
-## 将查询函数和修改函数分离（306）
-
-![LOGO](/public/image/refactoring/SeparateQueryFromModifier.png)
-
-## 移除设值函数（331）
-
-![LOGO](/public/image/refactoring/RemoveSettingMethod.png)
 
 ## 折叠继承体系（380）
 
