--- a/前端基础/重构/目录.md
+++ b/前端基础/重构/目录.md
@@ -217,42 +217,19 @@
 ![LOGO](/public/image/refactoring/ReplaceCommandWithFunction.png)
 
 
+## 函数上移（350）
+
+![LOGO](/public/image/refactoring/PullUpMethod.png)
 
 
+## 字段上移（353）
+
+![LOGO](/public/image/refactoring/PullUpField.png)
 
 
+## 构造函数本体上移（355）
 
-
-
-
-
-
-
-
-## 子类取代类型码（362）
-
-![LOGO](/public/image/refactoring/ReplaceTypeCodeWithSubclasses.png)
-
-
-
-
-
-## 折叠继承体系（380）
-
-![LOGO](/public/image/refactoring/CollapseHierarchy.png)
-
-
-## 以委托取代超类（399）
-
-![LOGO](/public/image/refactoring/ReplaceSuperclassWithDelegate.png)
-
-## 以委托取代子类（381）
-
-![LOGO](/public/image/refactoring/ReplaceSubclassWithDelegate.png)
-
-## 提炼超类（375）
-
-![LOGO](/public/image/refactoring/ExtractSuperclass.png)
+![LOGO](/public/image/refactoring/PullUpConstructorBody.png)
 
 ## 函数下移（359）
 
@@ -261,6 +238,36 @@
 ## 字段下移（361）
 
 ![LOGO](/public/image/refactoring/PushDownField.png)
+
+## 子类取代类型码（362）
+
+![LOGO](/public/image/refactoring/ReplaceTypeCodeWithSubclasses.png)
+
+## 移除子类（369）
+
+![LOGO](/public/image/refactoring/RemoveSubclass.png)
+
+## 提炼超类（375）
+
+![LOGO](/public/image/refactoring/ExtractSuperclass.png)
+
+## 折叠继承体系（380）
+
+![LOGO](/public/image/refactoring/CollapseHierarchy.png)
+
+## 以委托取代子类（381）
+
+![LOGO](/public/image/refactoring/ReplaceSubclassWithDelegate.png)
+
+## 以委托取代超类（399）
+
+![LOGO](/public/image/refactoring/ReplaceSuperclassWithDelegate.png)
+
+
+
+
+
+
 
 
 
