--- a/英语/01-口语块/2024年/12月.md
+++ b/英语/01-口语块/2024年/12月.md
@@ -495,3 +495,67 @@ v.
 
 
 
+## 9号
+
+### 我真的感激...
+
+::: tip `[aitru:liəpri:ʃieit]`
+
+`[aitru:liəpri:ʃieit]` I truly appreciate...?
+
+我真的感激...
+
+:::
+
+- `[aitru:liəpri:ʃieit]` everything you have done
+
+
+
+- `[aitru:liəpri:ʃieit]` everyone's discretion in this matter
+
+```md
+discretion `/dɪˈskreʃ(ə)n/`
+n.
+自行决定权，判断力；谨慎，慎重
+
+matter `/ˈmætər/`
+n.
+事情，问题；事态，情况；困境，麻烦（the matter）；
+物质；材料，物品，东西；书面材料，印刷品；（身体感染部位排出的）脓，黄水；
+命题内容；（表示数量或时间之少）大约，左右；（法庭审问或证明的）事项，案件
+
+v.
+要紧，有关系；（伤口）化脓，流脓
+
+【名】 （Matter）（英、法）马特，（西）马特尔（人名）
+```
+
+
+- `[aitru:liəpri:ʃieit]` that so let's try you plan
+
+
+
+- `[aitru:liəpri:ʃieit]` that my friend
+
+
+- `[aitru:liəpri:ʃieit]` the effort
+
+```md
+effort `/ˈefərt/`
+n.
+努力，艰难的尝试；力气，精力；有组织的活动；努力的结果，成就
+
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
